# template-upgrade-notifier

./: .gitignore  README.MD  action.yml
.cargo/: verify.ps1  verify.sh
.github/: changelog.hbs  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: rust.yml  template-notifier.yml
examples/: README.md  config.toml
examples/reloaded-templates-rust/v1.0.1-to-v1.1.0/: issue-template.md  metadata.toml  pr-template.md
src/: .gitignore  AGENTS.md  Cargo.toml  config.toml
src/.cargo/: verify.sh
src/cli/: Cargo.toml  README.MD
src/cli/src/: main.rs
src/template-upgrade-notifier/: Cargo.toml  README.MD
src/template-upgrade-notifier/src/: config.rs  discovery.rs  issues.rs  lib.rs  llm.rs  pull_requests.rs  rate_limit.rs  runner.rs  summary.rs  templates.rs  types.rs
src/template-upgrade-notifier/src/config/: error.rs  metadata.rs  migration.rs  mod.rs
src/template-upgrade-notifier/src/discovery/: error.rs  mod.rs  repository.rs
src/template-upgrade-notifier/src/issues/: error.rs  mod.rs  status.rs  upgrade_issue.rs
src/template-upgrade-notifier/src/llm/: config.rs  error.rs  mod.rs
src/template-upgrade-notifier/src/pull_requests/: error.rs  mod.rs  status.rs  upgrade_pr.rs
src/template-upgrade-notifier/src/rate_limit/: info.rs  mod.rs
src/template-upgrade-notifier/src/runner/: config.rs  error.rs  mod.rs
src/template-upgrade-notifier/src/summary/: mod.rs  result.rs  run_summary.rs
src/template-upgrade-notifier/src/templates/: error.rs  mod.rs  renderer.rs
src/template-upgrade-notifier/tests/: migrations.rs
src/template-upgrade-notifier/tests/fixtures/migrations/acme-template/v1.0.0-to-v1.0.1/: metadata.toml  pr-template.md
src/template-upgrade-notifier/tests/fixtures/migrations/broken-template/v1.0.1-to-v1.0.2/: issue-template.md  metadata.toml
