[package]
name = "template-upgrade-notifier"
version = "0.1.0"
edition = "2021"
description = "A GitHub Action that scans repositories for outdated template versions and creates upgrade notification issues with LLM-powered auto-fix PRs"
repository = "https://github.com/Sewer56/template-upgrade-notifier"
license-file = "../../LICENSE"
include = ["src/**/*", "../../LICENSE"]
readme = "README.MD"

[dependencies]
octocrab = "0.49"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
toml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
handlebars = "6"
thiserror = "2"
url = "2"
tempfile = "3"
serdes-ai = { version = "0.1.1", features = ["openai", "anthropic", "gemini"] }
serdes-ai-models = { version = "0.1.1", features = ["anthropic", "gemini", "openrouter"] }
llm-coding-tools-serdesai = "0.1.0"
gix-validate = "0.11"
bstr = "1"

[dev-dependencies]
tempfile = "3"


